Update description and references to 'bacalah'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Indomate — Developer</title>
-  <meta name="description" content="Indomate developer account. Mus7af — Bacalah: offline, local-first Quran reading app." />
+  <meta name="description" content="Indomate developer account. bacalah: offline, local-first Quran reading app." />
 
   <style>
     :root{
@@ -119,7 +119,7 @@
       </p>
 
       <div class="cta">
-        <a class="btn primary" href="#apps">Mus7af — Bacalah</a>
+        <a class="btn primary" href="#apps">bacalah</a>
         <a class="btn" href="./privacy.html">Privacy Policy</a>
       </div>
     </section>
@@ -128,7 +128,7 @@
       <div class="card" id="apps">
         <h3>Application</h3>
         <p>
-          <strong>Mus7af — Bacalah</strong><br />
+          <strong>bacalah</strong><br />
           Offline Quran reading app. All data stays on your device.
         </p>
         <p class="muted" style="margin-top:10px">
