Update navigation links and support email
Removed 'Apps' and 'About' links from navigation and updated support email address.

--- a/index.html
+++ b/index.html
@@ -105,8 +105,6 @@
       </a>
 
       <nav>
-        <a class="chip" href="#apps">Apps</a>
-        <a class="chip" href="#about">About</a>
         <a class="chip" href="./privacy.html">Privacy Policy</a>
       </nav>
     </header>
@@ -132,7 +130,7 @@
           Offline Quran reading app. All data stays on your device.
         </p>
         <p class="muted" style="margin-top:10px">
-          Support: <a href="mailto:support@indomate.example">support@indomate.example</a>
+          Support: <a href="mailto:support@indomate.example">pellet-65.oxfords@icloud.com</a>
         </p>
       </div>
 
