Update contact email in privacy.html

--- a/privacy.html
+++ b/privacy.html
@@ -118,7 +118,7 @@
       <h2>10. Contact</h2>
       <p>
         For questions, contact:  
-        <a href="mailto:privacy@indomate.example">privacy@indomate.example</a>
+        <a href="mailto:pellet-65.oxfords@icloud.com">pellet-65.oxfords@icloud.com</a>
       </p>
     </main>
 
