Update support email address in index.html

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           Offline Quran reading app. All data stays on your device.
         </p>
         <p class="muted" style="margin-top:10px">
-          Support: <a href="mailto:support@indomate.example">pellet-65.oxfords@icloud.com</a>
+          Support: <a href="mailto:pellet-65.oxfords@icloud.com">pellet-65.oxfords@icloud.com</a>
         </p>
       </div>
 
