Update logo and store links in bacalah.html

--- a/bacalah.html
+++ b/bacalah.html
@@ -225,10 +225,10 @@
   <header>
     <div class="topbar">
       <a class="brand" href="#top">
-        <img src="./logo.png" alt="Indomate logo" class="logo" />
+        <img src="./bacalah.png" alt="Indomate logo" class="logo" />
         <div>
           <h1>bacalah</h1>
-          <div class="muted">Aplikasi Quran offline • cepat • tanpa iklan</div>
+          <div class="muted">Quran dan Tafsir</div>
         </div>
       </a>
 
@@ -308,8 +308,8 @@
 
         <div class="cta" style="margin-top:14px">
           <!-- TODO: ganti href dengan link Play Store/App Store -->
-          <a class="btn primary" href="#" aria-disabled="true">Google Play (soon)</a>
-          <a class="btn" href="#" aria-disabled="true">App Store (soon)</a>
+          <a class="btn primary" href="https://play.google.com/store/apps/details?id=bacalah.quran.tafsir" aria-disabled="true">Google Play</a>
+          <a class="btn" href="https://apps.apple.com/id/app/bacalah/id6757565957" aria-disabled="true">App Store</a>
         </div>
 
         <p class="muted" style="margin-top:12px">
