Update application name in privacy policy

--- a/privacy.html
+++ b/privacy.html
@@ -56,7 +56,7 @@
       <p class="muted">
         Last updated: <span id="d"></span><br />
         Developer: <strong>Indomate</strong><br />
-        Application: <strong>bacalah</strong>
+        Application: <strong>bacalah & ingatlah</strong>
       </p>
 
       <h2>1. Overview</h2>
